# zombie-dice

./: .clang-format  CMakeLists.txt  README.md  author.md  zdice.ini
src/: __main.cpp  common.cpp  dice_bag.cpp  dice_bag.hpp  game_controller.cpp  game_controller.hpp  ini_parser.cpp  ini_parser.hpp  main.cpp  player.cpp  player.hpp  test  test.cpp  teste.cpp  views.cpp  zdice.ini  zdie.cpp  zdie.hpp
src/include/: common.hpp  dice_bag.hpp  game_controller.hpp  ini_parser.hpp  player.hpp  views.hpp  zdie.hpp
